# spaghetti

./: CNAME  CODEOWNERS  COPYRIGHT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  index.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: built_info.rs  main.rs
